--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,9 +2,9 @@
 name = "app"
 version = "0.1.0"
 description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
+authors = ["wuzhiqiang"]
+license = "MIT"
+repository = "https://github.com/Zhiqiang-Wu/EnvOptions2"
 default-run = "app"
 edition = "2021"
 rust-version = "1.57"
@@ -17,7 +17,7 @@ tauri-build = { version = "1.0.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0", features = ["api-all"] }
+tauri = { version = "1.0.0", features = [] }
 
 [features]
 # by default Tauri runs in production mode
