--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "repository": {
         "url": "https://github.com/Zhiqiang-Wu/EnvOptions2"
     },
+    "engines": {
+        "node": "=16"
+    },
     "scripts": {
         "postinstall": "max setup",
         "umi:dev": "max dev",
@@ -18,6 +21,7 @@
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
         "@ant-design/pro-components": "^1.1.3",
+        "@tauri-apps/api": "^1.0.1",
         "@umijs/max": "^4.0.0",
         "@zxing/library": "^0.19.1",
         "ahooks": "^3.5.0",
