--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,8 +20,8 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0", features = [] }
 winapi = { version = "0.3.9", features = ["winuser"] }
 regex = "1.5.6"
-log4rs = "1.1.1"
-log = "0.4.17"
+# log4rs = "1.1.1"
+# log = "0.4.17"
 rusqlite = "0.27.0"
 
 [features]
