--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,12 +17,12 @@ tauri-build = { version = "1.0.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0", features = [] }
+tauri = { version = "1.0.0", features = ["dialog-open"] }
 winapi = { version = "0.3.9", features = ["winuser"] }
 regex = "1.5.6"
-# log4rs = "1.1.1"
-# log = "0.4.17"
 rusqlite = "0.27.0"
+registry = "1.2.2"
+utfx = "0.1.0"
 
 [features]
 # by default Tauri runs in production mode
