--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
         "@ant-design/icons": "^4.7.0",
         "@ant-design/pro-components": "^1.1.3",
         "@tauri-apps/api": "^1.0.1",
-        "@umijs/max": "^4.0.1",
+        "@umijs/max": "^4.0.2",
         "@zxing/library": "^0.19.1",
         "ahooks": "^3.5.0",
         "antd": "^4.20.7",
         "immutable": "^4.1.0",
         "lodash": "^4.17.21",
+        "nanoid": "^4.0.0",
         "redux-actions": "^2.6.5",
         "reselect": "^4.1.6"
     },
