--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
+    "version": "2.0.0",
     "private": true,
+    "repository": {
+        "url": "https://github.com/Zhiqiang-Wu/EnvOptions2"
+    },
+    "license": "MIT",
     "author": {
         "name": "Wuzhiqiang",
         "url": "https://github.com/Zhiqiang-Wu/EnvOptions2"
     },
-    "license": "MIT",
-    "repository": {
-        "url": "https://github.com/Zhiqiang-Wu/EnvOptions2"
-    },
-    "engines": {
-        "node": "=16"
-    },
     "scripts": {
         "postinstall": "max setup",
-        "umi:dev": "max dev",
-        "umi:build": "max build",
+        "prepare": "husky install",
+        "tauri:build": "tauri build",
         "tauri:dev": "tauri dev",
-        "tauri:build": "tauri build"
+        "umi:build": "max build",
+        "umi:dev": "max dev"
+    },
+    "lint-staged": {
+        "*.{js,jsx,json}": [
+            "prettier --write"
+        ],
+        "*.ts?(x)": [
+            "prettier --parser=typescript --write"
+        ]
     },
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
@@ -36,10 +43,14 @@
         "@tauri-apps/cli": "^1.0.0",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "husky": "^8.0.1",
+        "lint-staged": "^13.0.3",
         "prettier": "^2",
         "prettier-plugin-organize-imports": "^2",
         "prettier-plugin-packagejson": "^2",
         "typescript": "^4.1.2"
     },
-    "version": "2.0.0"
+    "engines": {
+        "node": "=16"
+    }
 }
