--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "license": "MIT",
     "author": {
         "name": "Wuzhiqiang",
-        "url": "https://github.com/Zhiqiang-Wu/EnvOptions2"
+        "url": "https://github.com/Zhiqiang-Wu"
     },
     "scripts": {
+        "format": "prettier --cache --write .",
         "postinstall": "max setup",
         "prepare": "husky install",
         "tauri:build": "tauri build",
@@ -22,7 +23,6 @@
         "@ant-design/pro-components": "^1.1.3",
         "@tauri-apps/api": "^1.0.2",
         "@umijs/max": "^4.0.8",
-        "@zxing/library": "^0.19.1",
         "ahooks": "^3.5.2",
         "antd": "^4.21.5",
         "immutable": "^4.1.0",
