--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
         "@ant-design/pro-components": "^1.1.3",
-        "@tauri-apps/api": "^1.1.0",
-        "@umijs/max": "^4.0.30",
+        "@tauri-apps/api": "^1.2.0",
+        "@umijs/max": "^4.0.63",
         "ahooks": "^3.7.0",
         "antd": "^4.23.2",
         "immutable": "^4.1.0",
@@ -32,7 +32,7 @@
         "reselect": "^4.1.6"
     },
     "devDependencies": {
-        "@tauri-apps/cli": "^1.2.0",
+        "@tauri-apps/cli": "^1.2.3",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "husky": "^8.0.1",
@@ -43,6 +43,6 @@
         "typescript": "^4.1.2"
     },
     "engines": {
-        "node": "=16"
+        "node": "18"
     }
 }
